# extract2024

./: .env  .gitignore  README.md  deploy.sh  pyproject.toml  scrapinghub.yml  setup.py  update_requirements.sh
extract/: middlewares.py  settings.py
extract/spiders/: books_toscrape_com.py
