[tool.poetry]
name = "extract2024"
version = "0.1.0"
description = ""
authors = ["Pedro Perez de Ayala <ppayala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
scrapy = "^2.11.2"
shub = "^2.15.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
